Added correction file for D2D2L

--- a/Seance_3_Liste2Dico.ipynb
+++ b/Seance_3_Liste2Dico.ipynb
@@ -99,110 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table style='font-family:monospace;font-size:small;'><tr style='font-family:monospace;font-size:medium;'><th style='text-align: center;'><pre>Appel</pre></th><th style='text-align: center;'><pre>Attendu</pre></th><th style='text-align: center;'><pre>Obtenu</pre></th><th style='text-align: center;'><pre></pre></th></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_epured_5k.csv',\n",
-       "  1045)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "{ 'annee': 1979,\n",
-       "  'effectif': 101,\n",
-       "  'prenom': 'AMAR',\n",
-       "  'sexe': '1'}</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "{ 'annee': 1979,\n",
-       "  'effectif': 101,\n",
-       "  'prenom': 'AMAR',\n",
-       "  'sexe': '1'}</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre>verifier_donnees('nat2018_r300.csv', 24)</pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "{ 'annee': 1998,\n",
-       "  'effectif': 3,\n",
-       "  'prenom': 'ADEN',\n",
-       "  'sexe': '1'}</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "{ 'annee': 1998,\n",
-       "  'effectif': 3,\n",
-       "  'prenom': 'ADEN',\n",
-       "  'sexe': '1'}</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_n20.csv',\n",
-       "  12960)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "{ 'annee': 2014,\n",
-       "  'effectif': 4,\n",
-       "  'prenom': 'TYMÉHO',\n",
-       "  'sexe': '1'}</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "{ 'annee': 2014,\n",
-       "  'effectif': 4,\n",
-       "  'prenom': 'TYMÉHO',\n",
-       "  'sexe': '1'}</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_epured_5k.csv',\n",
-       "  386)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "{ 'annee': 2000,\n",
-       "  'effectif': 165,\n",
-       "  'prenom': 'ADRIAN',\n",
-       "  'sexe': '1'}</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "{ 'annee': 2000,\n",
-       "  'effectif': 165,\n",
-       "  'prenom': 'ADRIAN',\n",
-       "  'sexe': '1'}</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_epured_5k.csv',\n",
-       "  85032)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "{ 'annee': 2018,\n",
-       "  'effectif': 27868,\n",
-       "  'prenom': '_PRENOMS_RARES',\n",
-       "  'sexe': '2'}</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "{ 'annee': 2018,\n",
-       "  'effectif': 27868,\n",
-       "  'prenom': '_PRENOMS_RARES',\n",
-       "  'sexe': '2'}</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_r300.csv',\n",
-       "  1043)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "{ 'annee': 1962,\n",
-       "  'effectif': 6,\n",
-       "  'prenom': 'BARBE',\n",
-       "  'sexe': '2'}</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "{ 'annee': 1962,\n",
-       "  'effectif': 6,\n",
-       "  'prenom': 'BARBE',\n",
-       "  'sexe': '2'}</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_r300.csv',\n",
-       "  2010)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "{ 'annee': 1980,\n",
-       "  'effectif': 5,\n",
-       "  'prenom': 'ÉRIKA',\n",
-       "  'sexe': '2'}</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "{ 'annee': 1980,\n",
-       "  'effectif': 5,\n",
-       "  'prenom': 'ÉRIKA',\n",
-       "  'sexe': '2'}</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_n20.csv',\n",
-       "  30081)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "{ 'annee': 2018,\n",
-       "  'effectif': 3,\n",
-       "  'prenom': 'ÉYA',\n",
-       "  'sexe': '2'}</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "{ 'annee': 2018,\n",
-       "  'effectif': 3,\n",
-       "  'prenom': 'ÉYA',\n",
-       "  'sexe': '2'}</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fonction de vérification de votre code d'import de donnée.\n",
     "# Cette fonction appelle la votre et vérifie certaines lignes de la liste générée par votre import\n",
@@ -244,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -330,12 +231,12 @@
        "  1000)\n",
        "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
        "109</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "109</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#efd6d6;border-bottom:2px solid gray;'><td><pre><pre>verifier_aver_ages(\n",
+       "109</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_aver_ages(\n",
        "  'nat2018_r300.csv',\n",
-       "  2011)\n",
+       "  2010)\n",
        "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "IndexError('list index out of range')</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "IndexError('list index out of range')</pre></td><td style='border-left:3px solid gray;'><pre>KO</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_aver_ages(\n",
+       "40</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
+       "40</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_aver_ages(\n",
        "  'nat2018_n20.csv',\n",
        "  1690)\n",
        "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
@@ -346,7 +247,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
