--- a/Seance_3_Dico2Dico2Listes.ipynb
+++ b/Seance_3_Dico2Dico2Listes.ipynb
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv    # import de la librairie CSV permettant la manipulation des fichiers (voir séance 1)\n",
-    "from PythonSeance3.s3_correction import exo_import_donnee, exo_calcul_moyennes"
+    "from PythonSeance3.d2d2l_s3_correction import exo_import_donnee, exo_calcul_moyennes"
    ]
   },
   {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,22 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1481"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!!!!!!!!!!!!!!!!\n",
     "# CORRECTION  !!!\n",
@@ -140,18 +129,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style='font-family:monospace;font-size:small;'><tr style='font-family:monospace;font-size:medium;'><th style='text-align: center;'><pre>Appel</pre></th><th style='text-align: center;'><pre>Attendu</pre></th><th style='text-align: center;'><pre>Obtenu</pre></th><th style='text-align: center;'><pre></pre></th></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
+       "  'nat2018_epured_5k.csv',\n",
+       "  'NICOLAS',\n",
+       "  1984)\n",
+       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
+       "[13587, 0]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
+       "[13587, 0]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
+       "  'nat2018_r300.csv',\n",
+       "  'ALLAIN',\n",
+       "  1956)\n",
+       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
+       "[37, 0]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
+       "[37, 0]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
+       "  'nat2018_n20.csv',\n",
+       "  'WALLY',\n",
+       "  2005)\n",
+       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
+       "[11, 0]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
+       "[11, 0]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
+       "  'nat2018_epured_5k.csv',\n",
+       "  '_PRENOMS_RARES',\n",
+       "  2018)\n",
+       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
+       "[26110, 27868]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
+       "[26110, 27868]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
+       "  'nat2018_epured_5k.csv',\n",
+       "  'MICHELINE',\n",
+       "  1935)\n",
+       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
+       "[0, 3646]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
+       "[0, 3646]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
+       "  'nat2018_r300.csv',\n",
+       "  'RAYMONDE',\n",
+       "  1977)\n",
+       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
+       "[0, 21]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
+       "[0, 21]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
+       "  'nat2018_r300.csv',\n",
+       "  'ANATOLE',\n",
+       "  1911)\n",
+       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
+       "[72, 0]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
+       "[72, 0]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
+       "  'nat2018_n20.csv',\n",
+       "  'ÉYA',\n",
+       "  2018)\n",
+       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
+       "[0, 3]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
+       "[0, 3]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Fonction de vérification de votre code d'import de donnée.\n",
     "# Cette fonction appelle la votre et vérifie certaines lignes de la liste générée par votre import\n",
-    "def verifier_import(fichier, index):\n",
-    "    liste = importer_donnees(fichier)\n",
-    "    return liste[index]\n",
+    "def verifier_donnees(fichier, prenom, annee):\n",
+    "    data = importer_donnees(fichier)\n",
+    "    return data[prenom][annee]\n",
     "\n",
     "# Puis les compare avec celles attendues\n",
-    "exo_import_donnee.correction(verifier_import)"
+    "exo_import_donnee.correction(verifier_donnees)"
    ]
   },
   {
@@ -184,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,22 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'total': 37.303051495845835,\n",
-       " 'hommes': 37.27309503085932,\n",
-       " 'femmes': 88.20588235294117}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "moy = ages_moyens(data)\n",
     "moy[\"NICOLAS\"]"
