Updated notebooks files with exercices titles and notes.

--- a/Seance_3_Dico2Dico2Listes.ipynb
+++ b/Seance_3_Dico2Dico2Listes.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Séance 3\n",
+    "# Séance 3 - Dictionnaire de dictionnaires de listes de nombres de chiffres...\n",
     "## Introduction\n",
     "Le but de cette séance est de procéder à diverses opérations sur une structure de donnée afin d'en identifier les avantages et inconvénients et les comparer avec d'autres.\n",
     "\n",
-    "Dans cette séance vous travaillerez sur un dictionnaire de listes."
+    "Dans cette séance vous travaillerez sur un dictionnaire de dictionnaires de listes."
    ]
   },
   {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,57 +61,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!!!!!!!!!!!!!!!!\n",
-    "# CORRECTION  !!!\n",
-    "# A SUPPRIMER !!!\n",
-    "#!!!!!!!!!!!!!!!!\n",
-    "\n",
-    "def importer_donnees(fichier):\n",
-    "    with open(fichier, encoding='utf-8-sig') as nat_file:\n",
-    "        nat_data = csv.reader(nat_file, delimiter=';')\n",
-    "        nat_dict = dict()\n",
-    "        for row in nat_data:\n",
-    "            if nat_data.line_num != 1:\n",
-    "                genre = int(row[0]) - 1 # Conversion : 0 = homme, 1 = Femme\n",
-    "                prenom = row[1]\n",
-    "                annee = int(row[2])\n",
-    "                # Si le prénom n'est pas présent dans la structure : intialisation\n",
-    "                if prenom not in nat_dict:\n",
-    "                    nat_dict[prenom] = {annee: [0,0]}\n",
-    "                    \n",
-    "                # Si l'annee n'existe pas encore pour le prénom en cours : initialisation\n",
-    "                if annee not in nat_dict[prenom]: # l'année n'est pas créée\n",
-    "                    nat_dict[prenom][annee] = [0,0]\n",
-    "                \n",
-    "                # Valorisation de l'effectif\n",
-    "                nat_dict[prenom][annee][genre] = int(row[3])\n",
-    "                        \n",
-    "    return nat_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "#!!!!!!!!!!!!!!!!\n",
-    "# CORRECTION  !!!\n",
-    "# A SUPPRIMER !!!\n",
-    "#!!!!!!!!!!!!!!!!\n",
-    "data = importer_donnees(\"nat2018_epured_5k.csv\")\n",
-    "# Accéder aux données d'un prénom pour une année déterminée :\n",
-    "data[\"CLAUDE\"][1934][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -129,71 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table style='font-family:monospace;font-size:small;'><tr style='font-family:monospace;font-size:medium;'><th style='text-align: center;'><pre>Appel</pre></th><th style='text-align: center;'><pre>Attendu</pre></th><th style='text-align: center;'><pre>Obtenu</pre></th><th style='text-align: center;'><pre></pre></th></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_epured_5k.csv',\n",
-       "  'NICOLAS',\n",
-       "  1984)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "[13587, 0]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "[13587, 0]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_r300.csv',\n",
-       "  'ALLAIN',\n",
-       "  1956)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "[37, 0]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "[37, 0]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_n20.csv',\n",
-       "  'WALLY',\n",
-       "  2005)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "[11, 0]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "[11, 0]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_epured_5k.csv',\n",
-       "  '_PRENOMS_RARES',\n",
-       "  2018)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "[26110, 27868]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "[26110, 27868]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_epured_5k.csv',\n",
-       "  'MICHELINE',\n",
-       "  1935)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "[0, 3646]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "[0, 3646]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_r300.csv',\n",
-       "  'RAYMONDE',\n",
-       "  1977)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "[0, 21]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "[0, 21]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_r300.csv',\n",
-       "  'ANATOLE',\n",
-       "  1911)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "[72, 0]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "[72, 0]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr><tr style='background-color:#d6e9ce;border-bottom:2px solid gray;'><td><pre><pre>verifier_donnees(\n",
-       "  'nat2018_n20.csv',\n",
-       "  'ÉYA',\n",
-       "  2018)\n",
-       "</pre></pre></td><td style='text-align: left;border-left:3px solid gray;'><pre>\n",
-       "[0, 3]</pre></td><td style='text-align: left;border-left:1px solid gray;'><pre>\n",
-       "[0, 3]</pre></td><td style='border-left:3px solid gray;'><pre>OK</pre></td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fonction de vérification de votre code d'import de donnée.\n",
     "# Cette fonction appelle la votre et vérifie certaines lignes de la liste générée par votre import\n",
@@ -234,58 +121,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!!!!!!!!!!!!!!!!\n",
-    "# CORRECTION  !!!\n",
-    "# A SUPPRIMER !!!\n",
-    "#!!!!!!!!!!!!!!!!\n",
-    "\n",
-    "def ages_moyens(data):\n",
-    "    aver_ages = dict()\n",
-    "    for name in data.keys():\n",
-    "        calc = {0: {\"sum_ages\": 0, \"sum_births\": 0}, \n",
-    "                1: {\"sum_ages\": 0, \"sum_births\": 0}}\n",
-    "        # Parcours des années enregistrées pour le prénom\n",
-    "        for year in data[name].keys():\n",
-    "            # Calcul des variables pour hommes puis femmes\n",
-    "            for gender, births in enumerate(data[name][year]):\n",
-    "                calc[gender][\"sum_ages\"] += (2020 - year) * births  # Somme des ages pondérée par les naissances\n",
-    "                calc[gender][\"sum_births\"] += births                # Somme des naissances\n",
-    "        \n",
-    "        # Initalisation du dictionnaire pour le prénom en cours\n",
-    "        aver_ages[name] = dict()\n",
-    "        \n",
-    "        # Calcul de l'age moyen pondéré total\n",
-    "        total_ages   = calc[0][\"sum_ages\"] + calc[1][\"sum_ages\"]\n",
-    "        total_births = calc[0][\"sum_births\"] + calc[1][\"sum_births\"]\n",
-    "        aver_ages[name][\"total\"] = total_ages / total_births\n",
-    "        \n",
-    "        # Gestion du cas de division par 0 et calcul pour hommes et femmes\n",
-    "        if calc[0][\"sum_births\"] != 0:\n",
-    "            aver_ages[name][\"hommes\"] = calc[0][\"sum_ages\"] / calc[0][\"sum_births\"]\n",
-    "        \n",
-    "        if calc[1][\"sum_births\"] != 0:\n",
-    "            aver_ages[name][\"femmes\"] = calc[1][\"sum_ages\"] / calc[1][\"sum_births\"]        \n",
-    "    \n",
-    "    return aver_ages\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "moy = ages_moyens(data)\n",
-    "moy[\"NICOLAS\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -299,11 +134,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def verifier_aver_ages(fichier, index):\n",
-    "    liste = importer_donnees(fichier)\n",
-    "    moyennes = ages_moyens(liste)\n",
-    "    return int(moyennes[index][2])\n",
+    "# Fonction de vérification de votre code d'import de donnée.\n",
+    "# Cette fonction appelle la votre et vérifie certaines lignes de la liste générée par votre import\n",
+    "def verifier_aver_ages(fichier, prenom):\n",
+    "    data = importer_donnees(fichier)\n",
+    "    moyennes = ages_moyens(data)\n",
+    "    return moyennes[prenom]\n",
     "\n",
+    "# Puis les compare avec celles attendues\n",
     "exo_calcul_moyennes.correction(verifier_aver_ages)"
    ]
   },
@@ -311,17 +149,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Top 5 des vieux et jeunes prénoms \n",
+    "## Exploiter les données\n",
     "\n",
-    "Maintenant que nous avons une structure de donnée calculée"
+    "Nous avons maintenant à notre disposition 2 structures de données : \n",
+    "* Une structure \"brute\" contenant les données de départ.\n",
+    "* Une structure calculée contenant les ages moyens par prénom et par sexe.\n",
+    "\n",
+    "L'objectif maintenant est d'effectuer des traitements sur ces données afin d'en extraire des informations, des indicateurs ou une analyse.\n",
+    "\n",
+    "<div style=\"width: 95%;border: 1px solid gray;margin: 20px;  margin-left: auto; margin-right: auto;padding: 5px; background-color: lightyellow\">\n",
+    "    <b>Répartition du travail</b><br/>\n",
+    "    Les objectifs suivants ne peuvent être faits seuls dans le temps imparti. Répartissez-vous les tâches et entre-aidez vous.\n",
+    "</div>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Retourner l'age moyen d'un prénom\n",
-    "\n"
+    "### Créer des Top 5\n",
+    "Ci-dessous les informations nécessaires à la réalisation de cette partie.\n",
+    "\n",
+    "\n",
+    "<table style=\"width:95%; \">\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\" colspan=\"2\">\n",
+    "            <b>Résultat attendu</b><br/>\n",
+    "            <p>Il s'agit ici d'écrire une fonction qui renvoi les 5 prénoms les plus jeunes sur la base de l'age moyen calculé dans la seconde structure. </p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Coup de pouce</b><br/>\n",
+    "            <p>Une façon </p>\n",
+    "        </td>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Idée défi</b><br/>\n",
+    "            <p>Déjà fini ? Si ce n'est pas encore fait, envisagez d'optimiser votre programme :<ul>\n",
+    "                <li>avec des \"slices\" (voir google).</li>\n",
+    "                <li>Si vous passez par des structures intermédiaires, envisagez de les créer \"par compréhension\" (voir google).</li>\n",
+    "                </ul>\n",
+    "            </p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercice 2 : Retourner l'age moyen d'un prénom donné\n",
+    "Ci-dessous les informations nécessaires à la réalisation de cette partie.\n",
+    "\n",
+    "\n",
+    "<table style=\"width:95%; \">\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\" colspan=\"2\">\n",
+    "            <b>Résultat attendu</b><br/>\n",
+    "            <p>Il s'agit ici d'écrire un code qui renvoi l'age moyen d'un prénom entré par l'utilisateur.</p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Coup de pouce</b><br/>\n",
+    "            <p>Pour demander une valeur utilisez la fonction input(). Pour cette structure il va falloir parcourir les données jusqu'à tomber sur la bonne ligne puis afficher les données désirées. </p>\n",
+    "        </td>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Idée défi</b><br/>\n",
+    "            <p>Déjà fini ? Avez-vous géré les prénoms unisexes ?<br/>\n",
+    "                Retournez les données de tous les prénoms qui commencent par une chaine de caractère donnée.\n",
+    "            </p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -330,10 +231,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "{\"prénom\":   [colonne 1], \n",
-    " \"année\":    [colonne 2],\n",
-    " \"femmes\":   [colonne 3],\n",
-    " \"hommes\":   [colonne 4]}"
+    "# Votre code ici"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercice 3 : Afficher un graphique du nombre de naissance par an d'un prénom donné\n",
+    "Ci-dessous les informations nécessaires à la réalisation de cette partie.\n",
+    "\n",
+    "\n",
+    "<table style=\"width:95%; \">\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\" colspan=\"2\">\n",
+    "            <b>Résultat attendu</b><br/>\n",
+    "            <p>Il s'agit ici d'écrire un code qui demande un prénom et qui affiche l'évolution du nombre de naissances par an.</p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Coup de pouce</b><br/>\n",
+    "            <p>Pour demander une valeur utilisez la fonction input(). Pour afficher un graphique utilisez la librairie matplotlib.</p>\n",
+    "        </td>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Idée défi</b><br/>\n",
+    "            <p>Déjà fini ? Avez-vous géré les prénoms unisexes ?<br/>\n",
+    "                Si oui, envisagez d'ajouter une droite correspondant à l'age moyen sur le même graphique.\n",
+    "            </p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Votre code ici"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercice 4 : Afficher un graphique du nombre de prénoms différents par an\n",
+    "Ci-dessous les informations nécessaires à la réalisation de cette partie.\n",
+    "\n",
+    "\n",
+    "<table style=\"width:95%; \">\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\" colspan=\"2\">\n",
+    "            <b>Résultat attendu</b><br/>\n",
+    "            <p>Il s'agit ici d'écrire un code qui affiche un histogramme du nombre de prénoms différents pour chaque année.</p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Coup de pouce</b><br/>\n",
+    "            <p>Pour afficher un graphique utilisez la librairie matplotlib. Vous devrez passer par une structure intermédiaire qui contient le nombre de prénom par année, triée par année.</p>\n",
+    "        </td>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Idée défi</b><br/>\n",
+    "            <p>Déjà fini ? Avez-vous géré les prénoms unisexes ?<br/>\n",
+    "                Si oui, plus dur : affichez un historgramme du nombre de naissances total par an, avec répartition par couleur des prénoms donnés chaque année (histogrammes empilé par prénom).\n",
+    "            </p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Votre code ici"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FIN\n",
+    "Discutez de votre travail avec vos camarades de groupe afin que vous ayez tous rempli la fiche d'analyse entièrement et que vous puissiez comparer les résutlats du groupe avec celui des autres."
    ]
   }
  ],
