--- a/Seance_3_Liste2Listes.ipynb
+++ b/Seance_3_Liste2Listes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Séance 3\n",
+    "# Séance 3 - Liste de listes\n",
     "## Introduction\n",
     "Le but de cette séance est de procéder à diverses opérations sur une structure de donnée afin d'en identifier les avantages et inconvénients et les comparer avec d'autres.\n",
     "\n",
@@ -195,36 +195,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!!!!!!!!!!!!!!!!\n",
-    "# CORRECTION  !!!\n",
-    "# A SUPPRIMER !!!\n",
-    "#!!!!!!!!!!!!!!!!\n",
-    "\n",
-    "def ages_moyens(datas):\n",
-    "    aver_ages = [[\"sex\", \"name\", \"average_age\"], \n",
-    "                 [datas[1][0], datas[1][1]]]     # Initialisation du premier nom de la liste\n",
-    "    sum_ages, sum_count = 0, 0                   # Initialisation des variables de comptage\n",
-    "    \n",
-    "    for record in datas[1:]:\n",
-    "        if record[0:2] == aver_ages[-1][0:2]: # Si le sexe et le nom sont égaux à l'enregistrement en cours\n",
-    "            sum_ages = sum_ages + (2020 - record[2]) * record[3]   # Calcul de l'age pondéré par l'effectif\n",
-    "            sum_count = sum_count + record[3]                      # Calcul des effectifs totaux (dénominateur)\n",
-    "        else:\n",
-    "            aver_ages[-1].append(sum_ages / sum_count) # Si le nom change on ajoute l'age moyen à la dernière ligne\n",
-    "            aver_ages.append([record[0], record[1]])   # Ajout du nouveau nom dans une nouvelle ligne\n",
-    "            sum_ages = (2020 - record[2]) * record[3]  # Calcul du premier age pondéré\n",
-    "            sum_count = record[3]                      # Initialisation de la somme des effectifs\n",
-    "    \n",
-    "    aver_ages[-1].append(sum_ages / sum_count) # On met à jour l'age moyen du dernier prénom dans la dernière ligne\n",
-    "    return aver_ages"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -304,9 +274,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comment obtenir les 5 plus jeunes et les 5 plus vieux prénoms ? \n",
+    "## Exploiter les données\n",
     "\n",
-    "Maintenant que nous avons une structure de donnée calculée"
+    "Nous avons maintenant à notre disposition 2 structures de données : \n",
+    "* Une structure \"brute\" contenant les données de départ.\n",
+    "* Une structure calculée contenant les ages moyens par prénom et par sexe.\n",
+    "\n",
+    "L'objectif maintenant est d'effectuer des traitements sur ces données afin d'en extraire des informations, des indicateurs ou une analyse.\n",
+    "\n",
+    "<div style=\"width: 95%;border: 1px solid gray;margin: 20px;  margin-left: auto; margin-right: auto;padding: 5px; background-color: lightyellow\">\n",
+    "    <b>Répartition du travail</b><br/>\n",
+    "    Les objectifs suivants ne peuvent être faits seuls dans le temps imparti. Répartissez-vous les tâches et entre-aidez vous.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercice 1 : Créer des Top 5\n",
+    "Ci-dessous les informations nécessaires à la réalisation de cette partie.\n",
+    "\n",
+    "\n",
+    "<table style=\"width:95%; \">\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\" colspan=\"2\">\n",
+    "            <b>Résultat attendu</b><br/>\n",
+    "            <p>Il s'agit ici d'écrire une fonction qui renvoi les 5 prénoms les plus jeunes sur la base de l'age moyen calculé dans la seconde structure. </p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Coup de pouce</b><br/>\n",
+    "            <p>Plusieurs solutions sont envisageables, une des plus simples étant de trier puis de prendre les 5 premier. Pour trier vous aurez besoin de la fonction sorted(liste, key=) à laquelle vous indiquerez sur quelle valeur trier avec itemgetter.</p>\n",
+    "        </td>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Idée défi</b><br/>\n",
+    "            <p>Déjà fini ? Si ce n'est pas encore fait, envisagez d'optimiser votre programme :<ul>\n",
+    "                <li>avec des \"slices\" (voir google).</li>\n",
+    "                <li>Si vous passez par des structures intermédiaires, envisagez de les créer \"par compréhension\" (voir google).</li>\n",
+    "                </ul>\n",
+    "            </p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -314,7 +325,134 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Votre code ici"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercice 2 : Retourner l'age moyen d'un prénom donné\n",
+    "Ci-dessous les informations nécessaires à la réalisation de cette partie.\n",
+    "\n",
+    "\n",
+    "<table style=\"width:95%; \">\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\" colspan=\"2\">\n",
+    "            <b>Résultat attendu</b><br/>\n",
+    "            <p>Il s'agit ici d'écrire un code qui renvoi l'age moyen d'un prénom entré par l'utilisateur.</p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Coup de pouce</b><br/>\n",
+    "            <p>Pour demander une valeur utilisez la fonction input(). Pour cette structure il va falloir parcourir les données jusqu'à tomber sur la bonne ligne puis afficher les données désirées. </p>\n",
+    "        </td>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Idée défi</b><br/>\n",
+    "            <p>Déjà fini ? Avez-vous géré les prénoms unisexes ?<br/>\n",
+    "                Retournez les données de tous les prénoms qui commencent par une chaine de caractère donnée.\n",
+    "            </p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Votre code ici"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercice 3 : Afficher un graphique du nombre de naissance par an d'un prénom donné\n",
+    "Ci-dessous les informations nécessaires à la réalisation de cette partie.\n",
+    "\n",
+    "\n",
+    "<table style=\"width:95%; \">\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\" colspan=\"2\">\n",
+    "            <b>Résultat attendu</b><br/>\n",
+    "            <p>Il s'agit ici d'écrire un code qui demande un prénom et qui affiche l'évolution du nombre de naissances par an.</p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Coup de pouce</b><br/>\n",
+    "            <p>Pour demander une valeur utilisez la fonction input(). Pour afficher un graphique utilisez la librairie matplotlib.</p>\n",
+    "        </td>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Idée défi</b><br/>\n",
+    "            <p>Déjà fini ? Avez-vous géré les prénoms unisexes ?<br/>\n",
+    "                Si oui, envisagez d'ajouter une droite correspondant à l'age moyen sur le même graphique.\n",
+    "            </p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Votre code ici"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercice 4 : Afficher un graphique du nombre de prénoms différents par an\n",
+    "Ci-dessous les informations nécessaires à la réalisation de cette partie.\n",
+    "\n",
+    "\n",
+    "<table style=\"width:95%; \">\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\" colspan=\"2\">\n",
+    "            <b>Résultat attendu</b><br/>\n",
+    "            <p>Il s'agit ici d'écrire un code qui affiche un histogramme du nombre de prénoms différents pour chaque année.</p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Coup de pouce</b><br/>\n",
+    "            <p>Pour afficher un graphique utilisez la librairie matplotlib. Vous devrez passer par une structure intermédiaire qui contient le nombre de prénom par année, triée par année.</p>\n",
+    "        </td>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Idée défi</b><br/>\n",
+    "            <p>Déjà fini ? Avez-vous géré les prénoms unisexes ?<br/>\n",
+    "                Si oui, plus dur : affichez un historgramme du nombre de naissances total par an, avec répartition par couleur des prénoms donnés chaque année (histogrammes empilé par prénom).\n",
+    "            </p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Votre code ici"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FIN\n",
+    "Discutez de votre travail avec vos camarades de groupe afin que vous ayez tous rempli la fiche d'analyse entièrement et que vous puissiez comparer les résutlats du groupe avec celui des autres."
+   ]
   }
  ],
  "metadata": {
