--- a/Seance_3_Liste2Dico.ipynb
+++ b/Seance_3_Liste2Dico.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Séance 3\n",
+    "# Séance 3 - Liste de dictionnaires\n",
     "## Introduction\n",
     "Le but de cette séance est de procéder à diverses opérations sur une structure de donnée afin d'en identifier les avantages et inconvénients et les comparer avec d'autres.\n",
     "\n",
@@ -57,27 +57,6 @@
     "            # Retrournez les donnés chargées sous forme de liste de lignes (objet de type 'list')\n",
     "            # chaque ligne étant une liste des valeurs du fichier chargé\n",
     "            # Le format attendu est [ String, String, Int, Int ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!!!!!!!!!!!!!!!!\n",
-    "# CORRECTION  !!!\n",
-    "# A SUPPRIMER !!!\n",
-    "#!!!!!!!!!!!!!!!!\n",
-    "\n",
-    "def importer_donnees(fichier):\n",
-    "    with open(fichier, encoding='utf-8-sig') as nat_file:\n",
-    "        nat_data = csv.reader(nat_file, delimiter=';')\n",
-    "        nat_list = []\n",
-    "        for row in nat_data:\n",
-    "            if nat_data.line_num != 1:\n",
-    "                nat_list.append({\"sexe\": row[0], \"prenom\": row[1], \"annee\": int(row[2]), \"effectif\": int(row[3])})\n",
-    "    return nat_list"
    ]
   },
   {
@@ -141,37 +120,6 @@
     "    # insérez votre code ici  #\n",
     "    #-------------------------#\n",
     "    return # Retrournez la liste des ages moyens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!!!!!!!!!!!!!!!!\n",
-    "# CORRECTION  !!!\n",
-    "# A SUPPRIMER !!!\n",
-    "#!!!!!!!!!!!!!!!!\n",
-    "\n",
-    "def ages_moyens(datas):\n",
-    "    aver_ages = [{\"sexe\": datas[0][\"sexe\"], \"prenom\": datas[0][\"prenom\"]}]  # Initialisation du premier nom de la liste\n",
-    "    sum_ages, sum_count = 0, 0                                        # Initialisation des variables de comptage\n",
-    "    \n",
-    "    for record in datas:\n",
-    "        if (record[\"sexe\"], record[\"prenom\"]) == (aver_ages[-1][\"sexe\"], aver_ages[-1][\"prenom\"]): \n",
-    "            # Si le sexe et le nom sont égaux à l'enregistrement en cours\n",
-    "            sum_ages = sum_ages + (2020 - record[\"annee\"]) * record[\"effectif\"]   # Calcul de l'age pondéré par l'effectif\n",
-    "            sum_count = sum_count + record[\"effectif\"]                            # Calcul des effectifs totaux (dénominateur)\n",
-    "        else:\n",
-    "            # Si le nom change on ajoute l'age moyen à la dernière ligne\n",
-    "            aver_ages[-1][\"average\"] = sum_ages / sum_count \n",
-    "            aver_ages.append({\"sexe\": record[\"sexe\"], \"prenom\": record[\"prenom\"]})   # Ajout du nouveau nom dans une nouvelle ligne\n",
-    "            sum_ages = (2020 - record[\"annee\"]) * record[\"effectif\"]                  # Calcul du premier age pondéré\n",
-    "            sum_count = record[\"effectif\"]                                           # Initialisation de la somme des effectifs\n",
-    "    \n",
-    "    aver_ages[-1][\"average\"] = sum_ages / sum_count  # On met à jour l'age moyen du dernier prénom dans la dernière ligne\n",
-    "    return aver_ages"
    ]
   },
   {
@@ -283,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Créer des Top 5\n",
+    "### Exercice 1 : Créer des Top 5\n",
     "Ci-dessous les informations nécessaires à la réalisation de cette partie.\n",
     "\n",
     "\n",
@@ -297,7 +245,7 @@
     "    <tr>\n",
     "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
     "            <b>Coup de pouce</b><br/>\n",
-    "            <p>Une façon </p>\n",
+    "            <p>Plusieurs solutions sont envisageables, une des plus simples étant de trier puis de prendre les 5 premier. Pour trier vous aurez besoin de la fonction sorted(liste, key=) à laquelle vous indiquerez sur quelle valeur trier avec itemgetter.</p>\n",
     "        </td>\n",
     "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
     "            <b>Idée défi</b><br/>\n",
@@ -317,15 +265,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Votre fonction de traitement ici"
+    "# Votre code ici"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Retourner l'age moyen d'un prénom donné\n",
-    "\n"
+    "### Exercice 2 : Retourner l'age moyen d'un prénom donné\n",
+    "Ci-dessous les informations nécessaires à la réalisation de cette partie.\n",
+    "\n",
+    "\n",
+    "<table style=\"width:95%; \">\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\" colspan=\"2\">\n",
+    "            <b>Résultat attendu</b><br/>\n",
+    "            <p>Il s'agit ici d'écrire un code qui renvoi l'age moyen d'un prénom entré par l'utilisateur.</p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Coup de pouce</b><br/>\n",
+    "            <p>Pour demander une valeur utilisez la fonction input(). Pour cette structure il va falloir parcourir les données jusqu'à tomber sur la bonne ligne puis afficher les données désirées. </p>\n",
+    "        </td>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Idée défi</b><br/>\n",
+    "            <p>Déjà fini ? Avez-vous géré les prénoms unisexes ?<br/>\n",
+    "                Retournez les données de tous les prénoms qui commencent par une chaine de caractère donnée.\n",
+    "            </p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -334,14 +304,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Votre fonction de traitement ici"
+    "# Votre code ici"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BROUILLON"
+    "### Exercice 3 : Afficher un graphique du nombre de naissance par an d'un prénom donné\n",
+    "Ci-dessous les informations nécessaires à la réalisation de cette partie.\n",
+    "\n",
+    "\n",
+    "<table style=\"width:95%; \">\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\" colspan=\"2\">\n",
+    "            <b>Résultat attendu</b><br/>\n",
+    "            <p>Il s'agit ici d'écrire un code qui demande un prénom et qui affiche l'évolution du nombre de naissances par an.</p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Coup de pouce</b><br/>\n",
+    "            <p>Pour demander une valeur utilisez la fonction input(). Pour afficher un graphique utilisez la librairie matplotlib.</p>\n",
+    "        </td>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Idée défi</b><br/>\n",
+    "            <p>Déjà fini ? Avez-vous géré les prénoms unisexes ?<br/>\n",
+    "                Si oui, envisagez d'ajouter une droite correspondant à l'age moyen sur le même graphique.\n",
+    "            </p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -350,20 +343,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = importer_donnees(\"nat2018_epured_5k.csv\")\n",
-    "avg = ages_moyens(data)"
+    "# Votre code ici"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "avg.sort(key=lambda elem: elem[\"average\"], reverse=True)\n",
-    "avg"
+    "### Exercice 4 : Afficher un graphique du nombre de prénoms différents par an\n",
+    "Ci-dessous les informations nécessaires à la réalisation de cette partie.\n",
+    "\n",
+    "\n",
+    "<table style=\"width:95%; \">\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\" colspan=\"2\">\n",
+    "            <b>Résultat attendu</b><br/>\n",
+    "            <p>Il s'agit ici d'écrire un code qui affiche un histogramme du nombre de prénoms différents pour chaque année.</p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Coup de pouce</b><br/>\n",
+    "            <p>Pour afficher un graphique utilisez la librairie matplotlib. Vous devrez passer par une structure intermédiaire qui contient le nombre de prénom par année, triée par année.</p>\n",
+    "        </td>\n",
+    "        <td style=\"border: 1px solid gray;padding: 5px;text-align:left\">\n",
+    "            <b>Idée défi</b><br/>\n",
+    "            <p>Déjà fini ? Avez-vous géré les prénoms unisexes ?<br/>\n",
+    "                Si oui, plus dur : affichez un historgramme du nombre de naissances total par an, avec répartition par couleur des prénoms donnés chaque année (histogrammes empilé par prénom).\n",
+    "            </p>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -371,7 +381,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Votre code ici"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FIN\n",
+    "Discutez de votre travail avec vos camarades de groupe afin que vous ayez tous rempli la fiche d'analyse entièrement et que vous puissiez comparer les résutlats du groupe avec celui des autres."
+   ]
   }
  ],
  "metadata": {
